--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,10 +1,130 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Вход</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            /* ДОБАВЛЕНИЕ ПУТИ К ФОНУ */
+            background-image: url('/font/fotn_1_main.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            background-color: #f0fdf4; /* Запасной цвет */
+        }
+        .login-container {
+            background-color: rgba(255, 255, 255, 0.95);
+            padding: 2.5rem;
+            border-radius: 1rem;
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+            max-width: 400px;
+            width: 100%;
+            z-index: 10;
+        }
+        .input-group {
+            position: relative;
+        }
+        .toggle-password {
+            position: absolute;
+            right: 12px;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+            color: #4b5563;
+        }
+        .text-green-700 { color: #047857; }
+        .bg-green-600 { background-color: #059669; }
+    </style>
 </head>
 <body>
-$END$
+<div class="login-container">
+    <h1 class="text-3xl font-bold text-center text-green-700 mb-6">Денежная капсула</h1>
+    <form id="loginForm" class="space-y-4">
+        <div class="form-group">
+            <label for="username" class="block text-sm font-medium text-gray-700 mb-1">Имя пользователя</label>
+            <input type="text" id="username" placeholder="Введите имя" required
+                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-green-500 focus:border-green-500 transition duration-150">
+        </div>
+        <div class="form-group">
+            <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Пароль</label>
+            <div class="input-group">
+                <input type="password" id="password" placeholder="Введите пароль" required
+                       class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-green-500 focus:border-green-500 transition duration-150 pr-10">
+                <span id="togglePassword" class="toggle-password">
+                    <i data-lucide="eye"></i>
+                </span>
+            </div>
+        </div>
+        <button type="submit" class="w-full bg-green-600 hover:bg-green-700 text-white font-semibold py-2 rounded-lg transition duration-200 shadow-md">
+            Войти
+        </button>
+    </form>
+    <button id="register-btn" class="w-full mt-3 bg-gray-200 hover:bg-gray-300 text-gray-800 font-semibold py-2 rounded-lg transition duration-200">
+        Зарегистрироваться
+    </button>
+    <p id="error-message" class="error-message text-red-500 text-sm mt-3 text-center"></p>
+</div>
+
+<script src="js/api.js"></script>
+<script>
+    // Инициализация иконок Lucide
+    lucide.createIcons();
+
+    const passwordField = document.getElementById('password');
+    const toggleButton = document.getElementById('togglePassword');
+    const toggleIcon = document.querySelector('#togglePassword i');
+
+    // --- Логика "Показать/Скрыть пароль" ---
+    toggleButton.addEventListener('click', () => {
+        const type = passwordField.getAttribute('type') === 'password' ? 'text' : 'password';
+        passwordField.setAttribute('type', type);
+
+        // Смена иконки
+        if (type === 'text') {
+            toggleIcon.setAttribute('data-lucide', 'eye-off');
+        } else {
+            toggleIcon.setAttribute('data-lucide', 'eye');
+        }
+        lucide.createIcons();
+    });
+
+    // --- Логика входа (использует api.js) ---
+    document.getElementById('loginForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
+        const errorMessage = document.getElementById('error-message');
+        errorMessage.innerText = '';
+
+        try {
+            const response = await login(username, password);
+
+            if (response.ok) {
+                window.location.href = 'index.html';
+            } else {
+                errorMessage.innerText = 'Неверное имя пользователя или пароль.';
+            }
+        } catch (error) {
+            console.error('Ошибка входа:', error);
+            errorMessage.innerText = 'Ошибка при попытке входа. Проверьте соединение.';
+        }
+    });
+
+    document.getElementById('register-btn').addEventListener('click', () => {
+        window.location.href = 'register.html';
+    });
+</script>
 </body>
 </html>
